fix layout issue items tab

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -14,7 +14,7 @@ $black: #000;
     grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
     gap: 20px;
     //min-height: 200px;
-    height: 200px;
+    //height: 200px;
     .item_card{
         opacity: 0.8;
         border-radius: 2px;
